# RP2350-Embassy-Playground

./: README.md  flake.nix  rust-toolchain.toml
_00-blinky/: Cargo.toml
_00-blinky/.cargo/: config.toml
_00-blinky/src/: main.rs
_01-usb-hid/: Cargo.toml
_01-usb-hid/src/: main.rs
