[package]
name = "_01-usb-hid"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-halt = "1.0.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.4.0", features = ["rp235xa", "defmt", "time-driver", "critical-section-impl", "unstable-pac", "imagedef-secure-exe"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
usbd-hid = { version = "0.8.2", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

# rp235x-hal = { version = "0.3.0", features = ["binary-info", "critical-section-impl", "defmt", "rt"] }
# embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
# embassy-sync = { version = "0.5.0", features = ["defmt"] }
# embassy-usb = { version = "0.1.0", features = ["defmt"] }
# embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
# embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
# embassy-futures = { version = "0.1.0" }
# embassy-usb-logger = { version = "0.1.0" }
# cyw43 = { version = "0.1.0",  features = ["defmt", "firmware-logs"] }
# cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
# fixed = "1.23.1"
# fixed-macro = "1.2"
# display-interface-spi = "0.5.0"
# embedded-graphics = "0.8.1"
# display-interface = "0.5.0"
# byte-slice-cast = { version = "1.2.0", default-features = false }
# smart-leds = "0.4.0"
# heapless = "0.8"
# usbd-hid = "0.7.0"
# embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
# embedded-hal-async = "1.0"
# embedded-hal-bus = { version = "0.2.0", features = ["async"] }
# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
# embedded-storage = { version = "0.3" }
# static_cell = "2"
# portable-atomic = { version = "1.5", features = ["critical-section"] }
# log = "0.4"
# pio-proc = "0.2"
# pio = "0.2.1"
# rand = { version = "0.8.5", default-features = false }
# embedded-sdmmc = "0.7.0"
